# aysal-shield

./: .gitignore  .pre-commit-config.yml  LICENSE  README.md  azure-pipelines.yml  commands.txt  gitlab-ci.yml  main.py  pyproject.toml  requirements.txt  test_zap.py  testing.txt
.github/workflows/: security-scan.yml
configs/: deep_scan.json  dev.json
docs/: ARCHITECTURE.md  AUTH_SETUP.md  CONFIG_REFERENCE.md  EXTENSIBILITY.md  KNOWN_LIMITATIONS.md  README.md  RUNBOOK.md  THREAT_MODEL.md
securitytool/: cli.py  config.py  interactive.py  utils.py
securitytool/ci/: thresholds.py
securitytool/dast/: parsers.py  zaprunner.py
securitytool/discovery/: crawler.py  inventory.py
securitytool/reporting/: csvexport.py  htmlreport.py  jsonreport.py
securitytool/tomcat/: baselinecheck.py  headerscheck.py  webxmlcheck.py
test_output/: security_report_20260511_162453.csv  security_report_20260511_162453.html  security_report_20260511_162453.json
